[gd_scene load_steps=19 format=2]

[ext_resource path="res://Menus/Difficulty Select/Difficulty Select.gd" type="Script" id=1]
[ext_resource path="res://Tools/Desert Tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Resources/manaspc.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/difficulty_frame_1.png" type="Texture" id=4]
[ext_resource path="res://Resources/sun.png" type="Texture" id=5]
[ext_resource path="res://Resources/difficulty_frame_2.png" type="Texture" id=6]
[ext_resource path="res://Resources/nightmare_difficulty_0000.png" type="Texture" id=7]
[ext_resource path="res://Resources/nightmare_difficulty_0001.png" type="Texture" id=8]
[ext_resource path="res://Components/Camera Shake/Camera Shake.tscn" type="PackedScene" id=9]
[ext_resource path="res://Tools/SFX/SFX.tscn" type="PackedScene" id=10]
[ext_resource path="res://Resources/Audio/gun (1).wav" type="AudioStream" id=11]
[ext_resource path="res://Resources/UI Elements/back_button_default.png" type="Texture" id=12]
[ext_resource path="res://Resources/UI Elements/back_button_hover.png" type="Texture" id=13]
[ext_resource path="res://Screen Transition.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="Difficulty Select" type="Node2D"]
script = ExtResource( 1 )

[node name="Ground" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 39, 0, -65536, 39, 0, -65535, 39, 0, -65534, 39, 0, -65533, 39, 0, -65532, 39, 0, -65531, 39, 0, -65530, 39, 0, -65529, 39, 0, -65528, 39, 0, -65527, 39, 0, -65526, 39, 0, -65525, 39, 0, -65524, 39, 0, -65523, 39, 0, -65522, 39, 0, -65521, 39, 0, -65520, 39, 0, -65519, 39, 0, -65518, 39, 0, -65517, 39, 0, -65516, 39, 0, -65515, 39, 0, -65514, 39, 0, -65513, 39, 0, -65512, 39, 0, -65511, 39, 0, -65510, 39, 0, -65509, 39, 0, -65508, 39, 0, -65507, 39, 0, -65506, 39, 0, -65505, 39, 0, -65504, 39, 0, 65535, 39, 0, 0, 39, 0, 1, 39, 0, 2, 39, 0, 3, 39, 0, 4, 39, 0, 5, 39, 0, 6, 39, 0, 7, 39, 0, 8, 39, 0, 9, 39, 0, 10, 39, 0, 11, 39, 0, 12, 39, 0, 13, 39, 0, 14, 39, 0, 15, 39, 0, 16, 39, 0, 17, 39, 0, 18, 39, 0, 19, 39, 0, 20, 39, 0, 21, 39, 0, 22, 39, 0, 23, 39, 0, 24, 39, 0, 25, 39, 0, 26, 39, 0, 27, 39, 0, 28, 39, 0, 29, 39, 0, 30, 39, 0, 31, 39, 0, 32, 39, 0, 131071, 39, 0, 65536, 39, 0, 65537, 39, 0, 65538, 39, 0, 65539, 39, 0, 65540, 39, 0, 65541, 39, 0, 65542, 39, 0, 65543, 39, 0, 65544, 39, 0, 65545, 39, 0, 65546, 39, 0, 65547, 39, 0, 65548, 39, 0, 65549, 39, 0, 65550, 39, 0, 65551, 39, 0, 65552, 39, 0, 65553, 39, 0, 65554, 39, 0, 65555, 39, 0, 65556, 39, 0, 65557, 39, 0, 65558, 39, 0, 65567, 39, 0, 65568, 39, 0, 196607, 39, 0, 131072, 39, 0, 131073, 39, 0, 131074, 39, 0, 131086, 39, 0, 131087, 39, 0, 131088, 39, 0, 131103, 39, 0, 131104, 39, 0, 262143, 39, 0, 196608, 39, 0, 196609, 39, 0, 196622, 39, 0, 196623, 39, 0, 196624, 39, 0, 196639, 39, 0, 196640, 39, 0, 327679, 39, 0, 262144, 39, 0, 262145, 39, 0, 262158, 39, 0, 262159, 39, 0, 262160, 39, 0, 262175, 39, 0, 262176, 39, 0, 393215, 39, 0, 327680, 39, 0, 327681, 39, 0, 327694, 39, 0, 327695, 39, 0, 327696, 39, 0, 327711, 39, 0, 327712, 39, 0, 458751, 39, 0, 393216, 39, 0, 393217, 39, 0, 393230, 39, 0, 393231, 39, 0, 393232, 39, 0, 393247, 39, 0, 393248, 39, 0, 524287, 39, 0, 458752, 39, 0, 458753, 39, 0, 458766, 39, 0, 458767, 39, 0, 458768, 39, 0, 458783, 39, 0, 458784, 39, 0, 589823, 39, 0, 524288, 39, 0, 524289, 39, 0, 524303, 39, 0, 524304, 39, 0, 524319, 39, 0, 524320, 39, 0, 655359, 39, 0, 589824, 39, 0, 589825, 39, 0, 589826, 39, 0, 589827, 39, 0, 589828, 39, 0, 589829, 39, 0, 589830, 39, 0, 589831, 39, 0, 589832, 39, 0, 589833, 39, 0, 589834, 39, 0, 589835, 39, 0, 589836, 39, 0, 589837, 39, 0, 589838, 39, 0, 589839, 39, 0, 589840, 39, 0, 589855, 39, 0, 589856, 39, 0, 720895, 39, 0, 655360, 39, 0, 655361, 39, 0, 655362, 39, 0, 655363, 39, 0, 655364, 39, 0, 655365, 39, 0, 655366, 39, 0, 655367, 39, 0, 655368, 39, 0, 655369, 39, 0, 655370, 39, 0, 655371, 39, 0, 655372, 39, 0, 655373, 39, 0, 655374, 39, 0, 655375, 39, 0, 655376, 39, 0, 655391, 39, 0, 655392, 39, 0, 786431, 39, 0, 720896, 39, 0, 720897, 39, 0, 720898, 39, 0, 720899, 39, 0, 720900, 39, 0, 720901, 39, 0, 720902, 39, 0, 720903, 39, 0, 720904, 39, 0, 720905, 39, 0, 720906, 39, 0, 720907, 39, 0, 720908, 39, 0, 720909, 39, 0, 720910, 39, 0, 720911, 39, 0, 720912, 39, 0, 720927, 39, 0, 720928, 39, 0, 851967, 39, 0, 786432, 39, 0, 786433, 39, 0, 786463, 39, 0, 786464, 39, 0, 917503, 39, 0, 851968, 39, 0, 851969, 39, 0, 852000, 39, 0, 983039, 39, 0, 917504, 39, 0, 917505, 39, 0, 917535, 39, 0, 917536, 39, 0, 1048575, 39, 0, 983040, 39, 0, 983041, 39, 0, 983071, 39, 0, 983072, 39, 0, 1114111, 39, 0, 1048576, 39, 0, 1048607, 39, 0, 1048608, 39, 0, 1179647, 39, 0, 1114112, 39, 0, 1114143, 39, 0, 1114144, 39, 0, 1245183, 39, 0, 1179648, 39, 0, 1179679, 39, 0, 1179680, 39, 0, 1310719, 39, 0, 1245184, 39, 0, 1245185, 39, 0, 1245186, 39, 0, 1245187, 39, 0, 1245188, 39, 0, 1245189, 39, 0, 1245190, 39, 0, 1245191, 39, 0, 1245192, 39, 0, 1245193, 39, 0, 1245194, 39, 0, 1245195, 39, 0, 1245196, 39, 0, 1245197, 39, 0, 1245198, 39, 0, 1245199, 39, 0, 1245200, 39, 0, 1245201, 39, 0, 1245202, 39, 0, 1245203, 39, 0, 1245204, 39, 0, 1245205, 39, 0, 1245206, 39, 0, 1245207, 39, 0, 1245208, 39, 0, 1245209, 39, 0, 1245210, 39, 0, 1245211, 39, 0, 1245212, 39, 0, 1245213, 39, 0, 1245214, 39, 0, 1245215, 39, 0, 1245216, 39, 0 )

[node name="BG" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 12, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 7, 13, 0, 8, 13, 0, 9, 13, 0, 10, 13, 0, 11, 13, 0, 12, 13, 0, 13, 13, 0, 14, 13, 0, 15, 14, 0, 17, 13, 0, 18, 13, 0, 19, 13, 0, 20, 13, 0, 21, 13, 0, 22, 13, 0, 23, 13, 0, 24, 13, 0, 25, 13, 0, 26, 13, 0, 27, 13, 0, 28, 13, 0, 29, 13, 0, 30, 13, 0, 31, 14, 0, 65536, 15, 0, 65537, 16, 0, 65538, 16, 0, 65539, 16, 0, 65540, 16, 0, 65541, 16, 0, 65542, 16, 0, 65543, 16, 0, 65544, 16, 0, 65545, 16, 0, 65546, 16, 0, 65547, 16, 0, 65548, 16, 0, 65549, 16, 0, 65550, 16, 0, 65551, 17, 0, 65553, 16, 0, 65554, 16, 0, 65555, 16, 0, 65556, 16, 0, 65557, 16, 0, 65558, 16, 0, 65559, 16, 0, 65560, 16, 0, 65561, 16, 0, 65562, 16, 0, 65563, 16, 0, 65564, 16, 0, 65565, 16, 0, 65566, 16, 0, 65567, 17, 0, 131072, 15, 0, 131073, 16, 0, 131074, 16, 0, 131075, 16, 0, 131076, 16, 0, 131077, 16, 0, 131078, 16, 0, 131079, 16, 0, 131080, 16, 0, 131081, 16, 0, 131082, 16, 0, 131083, 16, 0, 131084, 16, 0, 131085, 16, 0, 131086, 16, 0, 131087, 17, 0, 131089, 16, 0, 131090, 16, 0, 131091, 16, 0, 131092, 16, 0, 131093, 16, 0, 131094, 16, 0, 131095, 16, 0, 131096, 16, 0, 131097, 16, 0, 131098, 16, 0, 131099, 16, 0, 131100, 16, 0, 131101, 16, 0, 131102, 16, 0, 131103, 17, 0, 196608, 15, 0, 196609, 16, 0, 196610, 16, 0, 196611, 16, 0, 196612, 16, 0, 196613, 16, 0, 196614, 16, 0, 196615, 16, 0, 196616, 16, 0, 196617, 16, 0, 196618, 16, 0, 196619, 16, 0, 196620, 16, 0, 196621, 16, 0, 196622, 16, 0, 196623, 17, 0, 196625, 16, 0, 196626, 16, 0, 196627, 16, 0, 196628, 16, 0, 196629, 16, 0, 196630, 16, 0, 196631, 16, 0, 196632, 16, 0, 196633, 16, 0, 196634, 16, 0, 196635, 16, 0, 196636, 16, 0, 196637, 16, 0, 196638, 16, 0, 196639, 17, 0, 262144, 15, 0, 262145, 16, 0, 262146, 16, 0, 262147, 16, 0, 262148, 16, 0, 262149, 16, 0, 262150, 16, 0, 262151, 16, 0, 262152, 16, 0, 262153, 16, 0, 262154, 16, 0, 262155, 16, 0, 262156, 16, 0, 262157, 16, 0, 262158, 16, 0, 262159, 17, 0, 262161, 16, 0, 262162, 16, 0, 262163, 16, 0, 262164, 16, 0, 262165, 16, 0, 262166, 16, 0, 262167, 16, 0, 262168, 16, 0, 262169, 16, 0, 262170, 16, 0, 262171, 16, 0, 262172, 16, 0, 262173, 16, 0, 262174, 16, 0, 262175, 17, 0, 327680, 15, 0, 327681, 16, 0, 327682, 16, 0, 327683, 16, 0, 327684, 16, 0, 327685, 16, 0, 327686, 16, 0, 327687, 16, 0, 327688, 16, 0, 327689, 16, 0, 327690, 16, 0, 327691, 16, 0, 327692, 16, 0, 327693, 16, 0, 327694, 16, 0, 327695, 17, 0, 327697, 16, 0, 327698, 16, 0, 327699, 16, 0, 327700, 16, 0, 327701, 16, 0, 327702, 16, 0, 327703, 16, 0, 327704, 16, 0, 327705, 16, 0, 327706, 16, 0, 327707, 16, 0, 327708, 16, 0, 327709, 16, 0, 327710, 16, 0, 327711, 17, 0, 393216, 15, 0, 393217, 16, 0, 393218, 16, 0, 393219, 16, 0, 393220, 16, 0, 393221, 16, 0, 393222, 16, 0, 393223, 16, 0, 393224, 16, 0, 393225, 16, 0, 393226, 16, 0, 393227, 16, 0, 393228, 16, 0, 393229, 16, 0, 393230, 16, 0, 393231, 17, 0, 393233, 16, 0, 393234, 16, 0, 393235, 16, 0, 393236, 16, 0, 393237, 16, 0, 393238, 16, 0, 393239, 16, 0, 393240, 16, 0, 393241, 16, 0, 393242, 16, 0, 393243, 16, 0, 393244, 16, 0, 393245, 16, 0, 393246, 16, 0, 393247, 17, 0, 458752, 15, 0, 458753, 16, 0, 458754, 16, 0, 458755, 16, 0, 458756, 16, 0, 458757, 16, 0, 458758, 16, 0, 458759, 16, 0, 458760, 16, 0, 458761, 16, 0, 458762, 16, 0, 458763, 16, 0, 458764, 16, 0, 458765, 16, 0, 458766, 16, 0, 458767, 17, 0, 458769, 16, 0, 458770, 16, 0, 458771, 16, 0, 458772, 16, 0, 458773, 16, 0, 458774, 16, 0, 458775, 16, 0, 458776, 16, 0, 458777, 16, 0, 458778, 16, 0, 458779, 16, 0, 458780, 16, 0, 458781, 16, 0, 458782, 16, 0, 458783, 17, 0, 524288, 15, 0, 524289, 19, 0, 524290, 19, 0, 524291, 19, 0, 524292, 19, 0, 524293, 19, 0, 524294, 19, 0, 524295, 19, 0, 524296, 19, 0, 524297, 19, 0, 524298, 19, 0, 524299, 19, 0, 524300, 19, 0, 524301, 19, 0, 524302, 19, 0, 524303, 20, 0, 524305, 16, 0, 524306, 16, 0, 524307, 16, 0, 524308, 16, 0, 524309, 16, 0, 524310, 16, 0, 524311, 16, 0, 524312, 16, 0, 524313, 16, 0, 524314, 16, 0, 524315, 16, 0, 524316, 16, 0, 524317, 16, 0, 524318, 16, 0, 524319, 17, 0, 589824, 21, 0, 589825, 22, 0, 589826, 22, 0, 589827, 22, 0, 589828, 22, 0, 589829, 22, 0, 589830, 22, 0, 589831, 22, 0, 589832, 22, 0, 589833, 22, 0, 589834, 22, 0, 589835, 22, 0, 589836, 22, 0, 589837, 22, 0, 589838, 22, 0, 589839, 23, 0, 589841, 16, 0, 589842, 16, 0, 589843, 16, 0, 589844, 16, 0, 589845, 16, 0, 589846, 16, 0, 589847, 16, 0, 589848, 16, 0, 589849, 16, 0, 589850, 16, 0, 589851, 16, 0, 589852, 16, 0, 589853, 16, 0, 589854, 16, 0, 589855, 17, 0, 655377, 16, 0, 655378, 16, 0, 655379, 16, 0, 655380, 16, 0, 655381, 16, 0, 655382, 16, 0, 655383, 16, 0, 655384, 16, 0, 655385, 16, 0, 655386, 16, 0, 655387, 16, 0, 655388, 16, 0, 655389, 16, 0, 655390, 16, 0, 655391, 17, 0, 720913, 16, 0, 720914, 16, 0, 720915, 16, 0, 720916, 16, 0, 720917, 16, 0, 720918, 16, 0, 720919, 16, 0, 720920, 16, 0, 720921, 16, 0, 720922, 16, 0, 720923, 16, 0, 720924, 16, 0, 720925, 16, 0, 720926, 16, 0, 720927, 17, 0, 786432, 15, 0, 786433, 16, 0, 786434, 16, 0, 786435, 16, 0, 786436, 16, 0, 786437, 16, 0, 786438, 16, 0, 786439, 16, 0, 786440, 16, 0, 786441, 16, 0, 786442, 16, 0, 786443, 16, 0, 786444, 16, 0, 786445, 16, 0, 786446, 16, 0, 786447, 16, 0, 786448, 16, 0, 786449, 16, 0, 786450, 16, 0, 786451, 16, 0, 786452, 16, 0, 786453, 16, 0, 786454, 16, 0, 786455, 16, 0, 786456, 16, 0, 786457, 16, 0, 786458, 16, 0, 786459, 16, 0, 786460, 16, 0, 786461, 16, 0, 786462, 16, 0, 786463, 17, 0, 851968, 15, 0, 851969, 16, 0, 851970, 16, 0, 851971, 16, 0, 851972, 16, 0, 851973, 16, 0, 851974, 16, 0, 851975, 16, 0, 851976, 16, 0, 851977, 16, 0, 851978, 16, 0, 851979, 16, 0, 851980, 16, 0, 851981, 16, 0, 851982, 16, 0, 851983, 16, 0, 851984, 16, 0, 851985, 16, 0, 851986, 16, 0, 851987, 16, 0, 851988, 16, 0, 851989, 16, 0, 851990, 16, 0, 851991, 16, 0, 851992, 16, 0, 851993, 16, 0, 851994, 16, 0, 851995, 16, 0, 851996, 16, 0, 851997, 16, 0, 851998, 16, 0, 851999, 17, 0, 917504, 15, 0, 917505, 16, 0, 917506, 16, 0, 917507, 16, 0, 917508, 16, 0, 917509, 16, 0, 917510, 16, 0, 917511, 16, 0, 917512, 16, 0, 917513, 16, 0, 917514, 16, 0, 917515, 16, 0, 917516, 16, 0, 917517, 16, 0, 917518, 16, 0, 917519, 16, 0, 917520, 16, 0, 917521, 16, 0, 917522, 16, 0, 917523, 16, 0, 917524, 16, 0, 917525, 16, 0, 917526, 16, 0, 917527, 16, 0, 917528, 16, 0, 917529, 16, 0, 917530, 16, 0, 917531, 16, 0, 917532, 16, 0, 917533, 16, 0, 917534, 16, 0, 917535, 17, 0, 983040, 15, 0, 983041, 16, 0, 983042, 16, 0, 983043, 16, 0, 983044, 16, 0, 983045, 16, 0, 983046, 16, 0, 983047, 16, 0, 983048, 16, 0, 983049, 16, 0, 983050, 16, 0, 983051, 16, 0, 983052, 16, 0, 983053, 16, 0, 983054, 16, 0, 983055, 16, 0, 983056, 16, 0, 983057, 16, 0, 983058, 16, 0, 983059, 16, 0, 983060, 16, 0, 983061, 16, 0, 983062, 16, 0, 983063, 16, 0, 983064, 16, 0, 983065, 16, 0, 983066, 16, 0, 983067, 16, 0, 983068, 16, 0, 983069, 16, 0, 983070, 16, 0, 983071, 17, 0, 1048576, 15, 0, 1048577, 16, 0, 1048578, 16, 0, 1048579, 16, 0, 1048580, 16, 0, 1048581, 16, 0, 1048582, 16, 0, 1048583, 16, 0, 1048584, 16, 0, 1048585, 16, 0, 1048586, 16, 0, 1048587, 16, 0, 1048588, 16, 0, 1048589, 16, 0, 1048590, 16, 0, 1048591, 16, 0, 1048592, 16, 0, 1048593, 16, 0, 1048594, 16, 0, 1048595, 16, 0, 1048596, 16, 0, 1048597, 16, 0, 1048598, 16, 0, 1048599, 16, 0, 1048600, 16, 0, 1048601, 16, 0, 1048602, 16, 0, 1048603, 16, 0, 1048604, 16, 0, 1048605, 16, 0, 1048606, 16, 0, 1048607, 17, 0, 1114112, 18, 0, 1114113, 19, 0, 1114114, 19, 0, 1114115, 19, 0, 1114116, 19, 0, 1114117, 19, 0, 1114118, 19, 0, 1114119, 19, 0, 1114120, 19, 0, 1114121, 19, 0, 1114122, 19, 0, 1114123, 19, 0, 1114124, 19, 0, 1114125, 19, 0, 1114126, 19, 0, 1114127, 19, 0, 1114128, 19, 0, 1114129, 19, 0, 1114130, 19, 0, 1114131, 19, 0, 1114132, 19, 0, 1114133, 19, 0, 1114134, 19, 0, 1114135, 19, 0, 1114136, 19, 0, 1114137, 19, 0, 1114138, 19, 0, 1114139, 19, 0, 1114140, 19, 0, 1114141, 19, 0, 1114142, 19, 0, 1114143, 20, 0, 1179648, 21, 0, 1179649, 22, 0, 1179650, 22, 0, 1179651, 22, 0, 1179652, 22, 0, 1179653, 22, 0, 1179654, 22, 0, 1179655, 22, 0, 1179656, 22, 0, 1179657, 22, 0, 1179658, 22, 0, 1179659, 22, 0, 1179660, 22, 0, 1179661, 22, 0, 1179662, 22, 0, 1179663, 22, 0, 1179664, 22, 0, 1179665, 22, 0, 1179666, 22, 0, 1179667, 22, 0, 1179668, 22, 0, 1179669, 22, 0, 1179670, 22, 0, 1179671, 22, 0, 1179672, 22, 0, 1179673, 22, 0, 1179674, 22, 0, 1179675, 22, 0, 1179676, 22, 0, 1179677, 22, 0, 1179678, 22, 0, 1179679, 23, 0 )

[node name="Title" type="Label" parent="."]
margin_left = -45.0948
margin_top = 23.3825
margin_right = 1067.91
margin_bottom = 103.383
custom_fonts/font = SubResource( 1 )
text = "Select Difficulty"
align = 1
valign = 1

[node name="Normal" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 147.819
margin_top = 196.53
margin_right = 386.819
margin_bottom = 430.53
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Normal"]
margin_left = -27.2202
margin_top = -67.0
margin_right = 273.78
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Normal
"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Normal"]
position = Vector2( 118.476, 116.021 )
scale = Vector2( 3.39792, 3.39792 )
texture = ExtResource( 5 )

[node name="Nightmare" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 624.889
margin_top = 200.311
margin_right = 862.889
margin_bottom = 431.311
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Nightmare"]
margin_left = -53.0256
margin_top = -70.8736
margin_right = 333.974
margin_bottom = 60.1264
custom_fonts/font = SubResource( 3 )
text = "Nightmare
"
align = 1
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="Nightmare"]
position = Vector2( 120.318, 119.09 )
scale = Vector2( 3.49384, 3.49384 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Camera Shake" parent="." instance=ExtResource( 9 )]
shake_power = 10.0
shake_duration = 0.3

[node name="Transition Timer" type="Timer" parent="."]

[node name="Back Timer" type="Timer" parent="."]
one_shot = true

[node name="SFX" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 11 )
volume_db = -3.0
pitch_scale = 0.6
volume = -3.0

[node name="Camera" type="Camera2D" parent="." groups=[
"Camera",
]]
position = Vector2( 513.576, 297.068 )
current = true

[node name="Back Button" type="TextureButton" parent="."]
margin_left = 378.324
margin_top = 448.867
margin_right = 639.324
margin_bottom = 533.867
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Transition" parent="." instance=ExtResource( 14 )]
fade_out_time = 0.7
fade_in_time = 0.7

[connection signal="pressed" from="Normal" to="." method="load_normal_mode"]
[connection signal="pressed" from="Nightmare" to="." method="load_nightmare_mode"]
[connection signal="timeout" from="Transition Timer" to="." method="_on_Transition_Timer_timeout"]
[connection signal="timeout" from="Back Timer" to="." method="_on_Back_Timer_timeout"]
[connection signal="pressed" from="Back Button" to="." method="_on_Back_Button_pressed"]
